--- a/MindTV-Unity/Packages/manifest.json
+++ b/MindTV-Unity/Packages/manifest.json
@@ -1,5 +1,7 @@
 {
   "dependencies": {
+    "com.bci4kids.bciessentials": "https://github.com/kirtonBCIlab/bci-essentials-unity.git?path=/Packages/com.bci4kids.bciessentials",
+    "com.labstreaminglayer.lsl4unity": "https://github.com/labstreaminglayer/LSL4Unity.git",
     "com.unity.ai.navigation": "1.1.5",
     "com.unity.collab-proxy": "2.2.0",
     "com.unity.feature.2d": "2.0.0",
